# gvolwheel

./: .anjuta_sym_db.db  .cvsignore  .gitignore  .tm_project2.cache  AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.am.bak  Makefile.in  README  README.md  TODO.tasks  aclocal.m4  autogen.sh  config.h  config.h.in  config.status  configure  configure.ac  configure.ac.bak  intltool-update  intltool-update.in  libtool
.anjuta/: default.profile
.anjuta/session/: anjuta.session  dock-layout.xml
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
po/: LINGUAS  Makefile  Makefile.in  POTFILES  POTFILES.in  ru.po
src/: Makefile  Makefile.am  Makefile.am.bak  Makefile.in  actions.c  actions.h  alsa.c  alsa.h  callbacks.c  callbacks.h  conf.c  conf.h  configwindow.c  configwindow.h  gvolwheel  main.c  main.c.bak  oss.c  oss.h  trayicon.c  trayicon.h  volume.c  volume.h
src/.deps/: actions.Po  callbacks.Po  eggtrayicon.Po  main.Po
